--- a/Views/DatHen/Add.cshtml
+++ b/Views/DatHen/Add.cshtml
@@ -85,7 +85,7 @@
                         <span asp-validation-for="GioHen" class="text-danger"></span>
                     </div>
 
-                    <input type="hidden" asp-for="TrangThai" value="Đã đặt hẹn" />
+                    <input type="hidden" asp-for="TrangThai" value="Đã đặt lịch" />
 
                     <div class="form-group">
                         <br />
