--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/NhaKhoaQuangVu.styles.css" asp-append-version="true" />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKVBKC5M4b9J1l91F0ekIBKvzl5A2Om7O1mNABf5VbR5bOn5aw7jup7Vfmg3mG5B61i3mg==" crossorigin="anonymous" />
     <style>
         .footer-spacing {
             margin-top: 50px; /* Thay đổi giá trị theo nhu cầu của bạn */
